[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineinfile"
dynamic = ["version"]
description = "Add & remove lines in files by regex"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "lineinfile@varonathe.org" }
]

keywords = [
    "add line",
    "edit",
    "ensure line",
    "insert line",
    "regexp",
    "remove line",
    "sed",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = []

[project.scripts]
lineinfile = "lineinfile.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/lineinfile"
"Bug Tracker" = "https://github.com/jwodder/lineinfile/issues"

[tool.hatch.version]
path = "src/lineinfile/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = "test/data/"
