[metadata]
name = lineinfile
version = attr:lineinfile.__version__
description = Add & remove lines in files by regex
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = lineinfile@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/lineinfile

keywords =
    add line
    edit
    ensure line
    insert line
    regexp
    remove line
    sed

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Text Processing
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/lineinfile
    Bug Tracker = https://github.com/jwodder/lineinfile/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    click >= 7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lineinfile = lineinfile.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
